--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "nanoid": "^4.0.0",
     "svelte": "^3.49.0",
     "vite": "^3.0.7"
   },
   "dependencies": {
     "bootstrap": "^5.2.0",
-    "bootstrap-icons": "^1.9.1"
+    "bootstrap-icons": "^1.9.1",
+    "nano": "^10.0.0"
   }
 }
