--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "autoprefixer": "^10.4.8",
     "nanoid": "^4.0.0",
+    "postcss": "^8.4.16",
     "svelte": "^3.49.0",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.8",
     "vite": "^3.0.7"
   },
   "dependencies": {
