--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "autoprefixer": "^10.4.8",
+    "fs": "^0.0.1-security",
     "nanoid": "^4.0.0",
     "postcss": "^8.4.16",
     "svelte": "^3.49.0",
@@ -21,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "js-yaml": "^4.1.0",
     "nano": "^10.0.0"
   }
 }
